--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,16 @@
         <activity android:name=".DashBoard" />
         <activity android:name=".ForgotPassword" />
         <activity android:name=".SignUp" />
-        <activity android:name=".ManageEmergencyContactsActivity"></activity>
+        <activity android:name=".ManageEmergencyContactsActivity" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-        <activity android:name=".HelpButtonActivity"></activity>
+
+        <activity android:name=".HelpButtonActivity" />
         <activity android:name=".OficialInformation" />
-        <activity android:name=".ONGInformation"></activity>
+        <activity android:name=".ONGInformation" />
+        <activity android:name=".Menu"></activity>
     </application>
 
 </manifest>
