--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,13 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission-sdk-23 android:maxSdkVersion="26"
-        android:name="android.permission.READ_PHONE_STATE"/>
+
+    <uses-permission-sdk-23
+        android:name="android.permission.READ_PHONE_STATE"
+        android:maxSdkVersion="26" />
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
@@ -24,13 +28,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ManageEmergencyContactsActivity"></activity>
+        <activity android:name=".ManageEmergencyContactsActivity" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
         <activity android:name=".OficialInformation" />
-        <activity android:name=".ONGInformation"></activity>
+        <activity android:name=".ONGInformation" />
+        <activity android:name=".PsychologistInformation"></activity>
     </application>
 
 </manifest>
