Ajuste + tela nova

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
 
         <activity android:name=".OficialInformation" />
         <activity android:name=".ONGInformation" />
-        <activity android:name=".PsychologistInformation"></activity>
+        <activity android:name=".PsychologistInformation" />
+        <activity android:name=".ViolenceTypes"></activity>
     </application>
 
 </manifest>
